src/robosub2019/run.out
nohup: ignoring input
/home/tartanauv/.local/lib/python2.7/site-packages/simple_pid/PID.py:22: UserWarning: time.monotonic() not available in python < 3.3, using time.time() as fallback
  warnings.warn('time.monotonic() not available in python < 3.3, using time.time() as fallback')
Traceback (most recent call last):
  File "/home/tartanauv/catkin_ws/src/tartan-sub/src/robosub2019/run_2019.py", line 5, in <module>
    from gate import Gate
  File "/home/tartanauv/catkin_ws/src/tartan-sub/src/robosub2019/gate.py", line 13, in <module>
    from vision_utilities import bbox, val_idx, bins, preprocess_image
  File "/home/tartanauv/catkin_ws/src/tartan-sub/src/robosub2019/vision_utilities.py", line 80
    if type == 'bat'
                   ^
SyntaxError: invalid syntax
